@@ -90,6 +90,13 @@
     </div>
 </div>
 
-<p id="version">v0.1.2.1</p>
+
+<div id="container3">
+    <div id="pitching-stats">
+
+    </div>
+</div>
+
+<p id="version">v0.1.2.2</p>
 
 <script src="./script.js"></script>
